--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,18 @@
         android:theme="@style/Theme.AppFutebol"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".JogadoresActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppFutebol">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".PartidasActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppFutebol">
